--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+
+    <!-- Font-Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Typescript TodoList</title>
 </head>
 <body>
 
-    <form id="form">
-        <input type="text" id="inputValue">
-        <button type="submit">Enviar</button>
-    </form>
-
-    <ul id="tasksContainer">
-        
-    </ul>
+    <div class="container">
+        <div class="container-wrapper">
+            <h1 class="container-title">TodoList</h1>
+            <form id="form" class="form-task">
+                <input type="text" id="inputValue" class="input-task" placeholder="Digite sua tarefa">
+                <button type="submit" class="btn-task">
+                    <i class="fa-regular fa-plus"></i>
+                </button>
+            </form>
+            <ul id="tasksContainer" class="task-container">
+            
+            </ul>
+        </div>
+    </div>
 
     <script src="./index.js"></script>
 
